--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .about {
-  background-color: #4e3229;
+  background-color: $dark-brown;
   @media screen and (max-width: 768px) {
     p {
       &:first-child {
