--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -5,7 +5,11 @@ nav {
   width: 100vw;
   z-index: 1;
   padding: 0;
-  transition: 0.5s;
+  transition: all 0.25s ease-in-out;
+  opacity: 0;
+  &.active {
+    opacity: 1;
+  }
   a {
     &:nth-child(2) {
       border-right: 1px solid #f5e4d7;
