--- a/src/assets/scss/utils/_tailwind.scss
+++ b/src/assets/scss/utils/_tailwind.scss
@@ -9,9 +9,9 @@
 
 @layer base {
   html {
-    // font-family: "Roboto", sans-serif;
-    // font-family: "Caladea", serif;
-    font-family: "Raleway", sans-serif;
+    font-family: "Roboto", sans-serif;
+    // // font-family: "Caladea", serif;
+    // font-family: "Raleway", sans-serif;
 
     color: #212121;
   }
